hello-world-js/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-js
  namespace: jrcasan
  labels:
    app: hello-world-js
    user: jrcasan
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-js
  template:
    metadata:
      name: hello-world-js
      labels:
        app: hello-world-js
        user: jrcasan
    spec:
      containers:
        - name: hello-world-js
          image: us.icr.io/jrcasan/hello-world-js:latest
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: jrcasan-us-icr
