hello-world-js/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-js-service              # Service Name
  namespace: jrcasan
spec:
  type: ClusterIP
  selector:
    app: hello-world-js                     # App to Match
  ports:
  - port: 8081                              # Port exposed by service (cluster-level)
    targetPort: 8081                        # Port the pod/container is exposed i.e. Deployment port (pod-level)
