hello-world-js/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-js-ingress
spec:
  rules:
  - host: iks-hello-world-js.buildlabs.team
  # host: build-labs-latam-iks-shar-2bef1f4b4097001da9502000c44fc2b2-0000.us-south.containers.appdomain.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-js-service
            port:
              number: 8081                  # Service port (cluster-level)
